<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">方块消除</string>
    <string name="start_button">自由模式</string>
    <string name="explain_button">闯关模式</string>
    <string name="about_button">关于游戏</string>
    <string name="exit_button">退出游戏</string>
    <string name="skip_button">继 续</string>
    <string name="title_activity_block">游戏中</string>
    <string name="title_activity_explain">游戏关卡</string>
    <string name="title_activity_game_tip">游戏提示</string>
    <string name="title_activity_about">关于游戏</string>
    <string name="explain_text">提示：点击四个相同颜色小方格形成一个大方框即可消除方框内的所有小方格，范围越大，得分越多哦。</string>
    <string name="time_text">剩余时间：03:00</string>
    <string name="pass_text">目标分数：1000</string>
    <string name="score_text">当前得分：0</string>
    <string name="high_score_text">最佳分数：0</string>
    <string name="level_text">当前关卡：1</string>
    <string name="preference_file_key">com.chenyanlong.block</string>
    <string name="author_text">作者： 陈彦龙</string>
    <string name="email_text">邮箱： 317924087@qq.com</string>

</resources>
