<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gaming">

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/liner_layout_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/high_score_text"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/high_score_text"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_text"
                android:textColor="@color/text_color"
                android:layout_marginLeft="30dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/pass_text"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/pass_text"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textColor="@color/text_color"
                android:layout_marginLeft="30dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/text_color"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/liner_layout"/>

    <TableLayout
        android:id="@+id/game_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/game_table_horizontal_margin"
        android:paddingRight="@dimen/game_table_horizontal_margin"
        android:paddingTop="@dimen/game_table_vertical_margin"
        android:paddingBottom="@dimen/game_table_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background" />

</RelativeLayout>